@@ -12,13 +12,13 @@ import static org.sosy_lab.cpachecker.cfa.types.c.CTypes.isIntegerType;
 import static org.sosy_lab.cpachecker.cfa.types.c.CTypes.isSignedIntegerType;
 import static org.sosy_lab.llvm_j.Value.OpCode.AShr;
 
+import com.google.common.base.CharMatcher;
 import com.google.common.base.Optional;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.TreeMultimap;
 import java.math.BigDecimal;
 import java.math.BigInteger;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
@@ -160,7 +160,7 @@ public class CFABuilder {
 
   public ParseResult build(final Module pModule, final String pFilename) throws LLVMException {
     visit(pModule, pFilename);
-    List<Path> input_file = ImmutableList.of(Paths.get(pFilename));
+    List<Path> input_file = ImmutableList.of(Path.of(pFilename));
 
     return new ParseResult(functions, cfaNodes, globalDeclarations, input_file);
   }
@@ -607,7 +607,7 @@ public class CFABuilder {
             curNode = newNode(pFunction);
             addEdge(
                 new CStatementEdge(
-                    expr.toASTString() + i.toString(),
+                    expr.toASTString() + i,
                     (CStatement) expr,
                     exprLocation,
                     prevNode,
@@ -1116,7 +1116,7 @@ public class CFABuilder {
       case LShr: // Logical shift right
         // GNU C performs a logical shift for unsigned types
         op1type = typeConverter.getCType(operand1.typeOf(), /* isUnsigned = */ true);
-        operand1Exp = getExpression(operand1, op1type, pFileName);
+        operand1Exp = castToExpectedType(operand1Exp, op1type, getLocation(pItem, pFileName));
         // $FALL-THROUGH$
       case AShr: // Arithmetic shift right
         if (!(isIntegerType(op1type) && isIntegerType(op2type))) {
@@ -1136,7 +1136,7 @@ public class CFABuilder {
 
         // operand2 should always be treated as an unsigned value
         op2type = typeConverter.getCType(operand2.typeOf(), /* isUnsigned = */ true);
-        operand2Exp = getExpression(operand2, op2type, pFileName);
+        operand2Exp = castToExpectedType(operand2Exp, op2type, getLocation(pItem, pFileName));
 
         // GNU C performs an arithmetic shift for signed types
         // op1type is signed by default for integer types
@@ -1232,10 +1232,8 @@ public class CFABuilder {
       CType constantType = typeConverter.getCType(pItem.typeOf());
       /* get the name of the type and sanitize it
        * to form a correct C identifier */
-      String typeName = constantType.toString().replace(' ', '_');
-      typeName = typeName.replace('(', '_');
-      typeName = typeName.replace(')', '_');
-      typeName = typeName.replace(':', '_');
+      String typeName = constantType.toString();
+      typeName = CharMatcher.anyOf(" ():").replaceFrom(typeName, "_");
       typeName = typeName.replace("*", "_ptr_");
 
       String undefName = "__VERIFIER_undef_" + typeName;
@@ -1930,6 +1928,6 @@ public class CFABuilder {
 
   private FileLocation getLocation(final Value pItem, final String pFileName) {
     assert pItem != null;
-    return new FileLocation(pFileName, 0, 1, 0, 0);
+    return new FileLocation(Path.of(pFileName), 0, 1, 0, 0);
   }
 }
