@@ -26,7 +26,6 @@ import java.io.PrintStream;
 import java.io.Writer;
 import java.nio.charset.Charset;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Map;
@@ -89,12 +88,12 @@ class MainCPAStatistics implements Statistics {
   @Option(secure=true, name="reachedSet.file",
       description="print reached set to text file")
   @FileOption(FileOption.Type.OUTPUT_FILE)
-  private Path reachedSetFile = Paths.get("reached.txt");
+  private Path reachedSetFile = Path.of("reached.txt");
 
   @Option(secure=true, name="reachedSet.dot",
       description="print reached set to graph file")
   @FileOption(FileOption.Type.OUTPUT_FILE)
-  private Path reachedSetGraphDumpPath = Paths.get("reached.dot");
+  private Path reachedSetGraphDumpPath = Path.of("reached.dot");
 
   @Option(secure=true, name="statistics.memory",
     description="track memory usage of JVM during runtime")
@@ -125,7 +124,7 @@ class MainCPAStatistics implements Statistics {
 
   @Option(secure = true, name = "coverage.file", description = "print coverage info to file")
   @FileOption(FileOption.Type.OUTPUT_FILE)
-  private Path outputCoverageFile = Paths.get("coverage.info");
+  private Path outputCoverageFile = Path.of("coverage.info");
 
   private final LogManager logger;
   private final Collection<Statistics> subStats;
