@@ -14,7 +14,6 @@ import com.google.common.collect.HashMultimap;
 import com.google.common.collect.Multimap;
 import java.io.IOException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Collection;
 import java.util.HashSet;
 import java.util.OptionalInt;
@@ -57,7 +56,7 @@ public class PredicateProvider {
 
   @Option(description = "file that consists of old abstractions, to be used during strengthening")
   @FileOption(FileOption.Type.OPTIONAL_INPUT_FILE)
-  private Path strengthenWithReusedAbstractionsFile = Paths.get("abstractions.txt");
+  private Path strengthenWithReusedAbstractionsFile = Path.of("abstractions.txt");
 
   private final CFA cfa;
   private final LogManager logger;
